--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_gcse_core_tech_exercise_topics/developments_in_new_materials.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_gcse_core_tech_exercise_topics/developments_in_new_materials.html
@@ -28,7 +28,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_smart_materials.html">Smart materials</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_smart_materials.pdf">Smart materials Questions</a>
                         </div>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_composite_materials.html">Composite materials</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_composite_materials.pdf">Composite materials Questions</a>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_technical_textiles.html">Technical textiles</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_technical_textiles.pdf">Technical textiles Questions</a>
                         </div>
                     </div>
                 </div>
