--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_gcse_core_tech_exercise_topics/materials_and_their_working_properties.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_gcse_core_tech_exercise_topics/materials_and_their_working_properties.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_papers_and_boards.html">Papers and boards</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A6/3.1.6_papers_and_boards.pdf">Papers and boards Questions</a>
                         </div>
                     </div>
                 </div>
@@ -28,8 +28,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_natural_and_manufactured_timbers.html">Natural and manufactured timbers
-                            </a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A6/3.1.6_natural_and_manufactured_timbers.pdf">Natural and manufactured timbers Questions</a>
                         </div>
                     </div>
                 </div>
@@ -39,7 +38,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_metals_and_alloys.html">Metals and alloys</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A6/3.1.6_metals_and_alloys.pdf">Metals and alloys Questions</a>
                         </div>
                     </div>
                 </div>
@@ -49,7 +48,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_polymers.html">Polymers</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A6/3.1.6_polymers.pdf">Polymers Questions</a>
                         </div>
                     </div>
                 </div>
@@ -58,7 +57,7 @@
                     <div class="portfolio-img-background" style="background-image:url(/images/matnote6.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_textiles.html">Textiles</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A6/3.1.6_textiles.pdf">Textiles Questions</a>
                             <!-- <a href="Notes\FactorsInfluencingTheDevelopmentOfProducts.html">Factors Influencing The Development Of Products</a> -->
                         </div>
                     </div>
@@ -69,7 +68,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_material_properties.html">Material properties</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A6/3.1.6_material_properties.pdf">Material properties Questions</a>
                         </div>
                     </div>
                 </div>
