--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_gcse_core_tech_exercise_topics/mechanical_devices.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_gcse_core_tech_exercise_topics/mechanical_devices.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_different_types_of_movement.html">Different types of movement</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A5/3.1.5_different_types_of_movement.pdf">Different types of movement Questions</a>
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_changing_magnitude_and_direction_of_fore.html">Changing magnitude and direction of force</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A5/3.1.5_changing_magnitude_and_direction_of_force.pdf">Changing magnitude and direction of force Questions</a>
                         </div>
                     </div>
                 </div>
