--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_gcse_core_tech_exercise_topics/energy_generation_and_storage.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_gcse_core_tech_exercise_topics/energy_generation_and_storage.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_fossil_fuels.html">Fossil fuels</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A2/3.1.2_fossil_fuels.pdf">Fossil fuels Questions</a>
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_nuclear_power.html">Nuclear power</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A2/3.1.2_nuclear_power.pdf">Nuclear power Questions</a>
                         </div>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_renewable_energy.html">Renewable energy</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A2/3.1.2_renewable_energy.pdf">Renewable energy Questions</a>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_energy_storage_systems.html">Energy storage systems including batteries</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A2/3.1.2_energy_storage_systems.pdf">Energy storage systems including batteries Questions</a>
                         </div>
                     </div>
                 </div>
