--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_gcse_core_tech_exercise_topics/systems_approach_to_designing.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_gcse_core_tech_exercise_topics/systems_approach_to_designing.html
@@ -18,27 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_inputs.html">Inputs</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio2.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_processes.html">Processes</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio3.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_outputs.html">Outputs</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A4/3.1.4_systems_approach_to_designing.pdf">Systems approach to designing (Inputs, Processes, Outputs)</a>
                         </div>
                     </div>
                 </div>
