--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/forces_and_stresses.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/forces_and_stresses.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_materials_and_objects_can_be_manipulated_to_resist.html">Materials and objects can be manipulated to resist and work with forces and stresses</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B2/3.2.2_materials_and_objects_can_be_manipulated_to_resist_and_work_with_forces_and_stresses.pdf">Materials and objects can be manipulated to resist and work with forces and stresses Questions</a>
                         </div>
                     </div>
                 </div>
@@ -28,8 +28,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_materials_can_be_enhanced_to_resist.html">Materials can be enhanced to resist and work with forces and stresses to improve
-                                functionality</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B2/3.2.2_materials_can_be_enhanced_to_resist_and_work_with_forces_and_stresses_to_improve_functionality.pdf">Materials can be enhanced to resist and work with forces and stresses to improve functionality Questions</a>
                         </div>
                     </div>
                 </div>
