--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/scales_of_production.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/scales_of_production.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_scales_of_production.html"> Scales of production</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B7/3.2.7_scales_of_production.pdf"> Scales of production Questions</a>
                         </div>
                     </div>
                 </div>
