--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/selection_of_materials_or_components.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/selection_of_materials_or_components.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_selection_of_materials_or_components.html">Selection of materials or components</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B1/3.2.1_selection_of_materials_or_components.pdf">Selection of materials or components Questions</a>
                         </div>
                     </div>
                 </div>
