--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/using_and_working_with_materials.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/using_and_working_with_materials.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_properties_of_materials.html">Properties of materials</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B5/3.2.5_properties_of_materials.pdf">Properties of materials Questions</a>
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_the_modification_of_properties_for_specific_purp.html">The modifcation of properties for specifc purposes</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B5/3.2.5_the_modification_of_properties_for_specific_purposes.pdf">The modifcation of properties for specifc purposes Questions</a>
                         </div>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_how_to_shape_and_form_using_cutting_abrasion_and_additi.html">How to shape and form using cutting, abrasion and addition</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B5/3.2.5_how_to_shape_and_from_using_cutting_abrasion_and_addition.pdf">How to shape and form using cutting, abrasion and addition Questions</a>
                         </div>
                     </div>
                 </div>
