--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/surface_treatments_and_finishes.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_gcse_spec_prin_exercise_topics/surface_treatments_and_finishes.html
@@ -18,8 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_gcse_spec_prin_notes_pages/aqa_gcse_surface_treatments_and_finishes.html">Surface treatments and fnishes
-                            </a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B9/3.2.9_surface_treatments_and_finishes.pdf">Surface treatments and fnishes Questions</a>
                         </div>
                     </div>
                 </div>
