--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Designing_and_making/aqa_gcse_design_make_exercise_topics/design_strategies.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Designing_and_making/aqa_gcse_design_make_exercise_topics/design_strategies.html
@@ -10,15 +10,6 @@
             <h2>Free handmade revision notes tailored for GCSE and A Level Design and Technology</h2>
         </div>
 
-        <!-- Search bar section -->
-        <div class="search-container" style="background-color: rgb(255, 255, 255);">
-            <input type="text" id="searchInput" placeholder="Search for questions by topics...">
-            <button id="searchButton">Search</button>
-        </div>
-
-        <!-- Search Results List -->
-        <ul id="searchResults"></ul>
-
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
 
@@ -27,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_core_tech_gcse_exercises.html">Section A: Core technical principles Questions</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section C - Designing and making principles/.html">Generate imaginative and creative design ideas using a range of different design strategies Questions</a>
                         </div>
                     </div>
                 </div>
@@ -37,20 +28,12 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_spec_prin_gcse_exercises.html">Section B: Specialist technical principles Questions</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section C - Designing and making principles/.html">Explore and develop their own ideas Questions</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio3.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises//Designing_and_making/aqa_design_make_gcse_exercises.html">Section C: Designing and making principles Questions</a>
-                        </div>
-                    </div>
-                </div>
+               
                 
             </div>
         </div>
@@ -66,5 +49,5 @@
     </style>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="/scripts/aqa_gcse_searchenginequestions.js"></script>
+<script src="/script.js"></script>
 </html>
