--- a/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Designing_and_making/aqa_gcse_design_make_exercise_topics/investigation_primary_and_seconary_data.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Designing_and_making/aqa_gcse_design_make_exercise_topics/investigation_primary_and_seconary_data.html
@@ -10,15 +10,6 @@
             <h2>Free handmade revision notes tailored for GCSE and A Level Design and Technology</h2>
         </div>
 
-        <!-- Search bar section -->
-        <div class="search-container" style="background-color: rgb(255, 255, 255);">
-            <input type="text" id="searchInput" placeholder="Search for questions by topics...">
-            <button id="searchButton">Search</button>
-        </div>
-
-        <!-- Search Results List -->
-        <ul id="searchResults"></ul>
-
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
 
@@ -27,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Core_technical_principles/aqa_core_tech_gcse_exercises.html">Section A: Core technical principles Questions</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions//Section C - Designing and making principles/Topic C1/3.3.1_use_primary_and_secondary_data_to_understand_client_and_or_user_needs.pdf">Use primary and secondary data to understand client and/or user needs Questions</a>
                         </div>
                     </div>
                 </div>
@@ -37,20 +28,22 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises/Specialist_technical_principles/aqa_spec_prin_gcse_exercises.html">Section B: Specialist technical principles Questions</a>
+                            <a href="/Questions (Word docs)/AQA GCSE Questions//Section C - Designing and making principles/Topic C1/3.3.1_how_to_write_a_design_brief_and_produce_a_design_and_manufac_spec.pdf">How to write a design brief and produce a design and manufacturing specifcation Questions</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio3.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio2.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="/exercises/exercise_level/exercise_examboard/aqa_gcse_exercises//Designing_and_making/aqa_design_make_gcse_exercises.html">Section C: Designing and making principles Questions</a>
+                            <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
+                            <a href="/Questions (Word docs)/AQA GCSE Questions/Section C - Designing and making principles/Topic C1/3.3.1_carry_out_investigations_in_order_to_identify_problems_and_needs.pdf">Carry out investigations in order to identfy problems and needs Questions</a>
                         </div>
                     </div>
                 </div>
+
+               
                 
             </div>
         </div>
@@ -66,5 +59,5 @@
     </style>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="/scripts/aqa_gcse_searchenginequestions.js"></script>
+<script src="/script.js"></script>
 </html>
