--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         .meet-the-team {
             text-align: center;
             padding: 40px 20px;
-            background-color: #f9f9f9;
+            background-color: #f9f9f900;
         }
     
         .team-member {
@@ -70,11 +70,11 @@
         <div class="why-choose-us">
             <h2>Why Choose Us?</h2>
             <ul>
-                <li>✅ High-quality revision notes tailored for GCSE & A-Level students</li>
-                <li>✅ Free access to past papers and coursework examples</li>
-                <li>✅ A growing library of exercises and questions</li>
-                <li>✅ Expert tutoring services for personalised learning</li>
-                <li>✅ A supportive community of learners</li>
+                <li>High-quality revision notes tailored for GCSE & A-Level students</li>
+                <li>Free access to past papers and coursework examples</li>
+                <li>A growing library of exercises and questions</li>
+                <li>Expert tutoring services for personalised learning</li>
+                <li>A supportive community of learners</li>
             </ul>
         </div>
 
@@ -84,7 +84,7 @@
                 <img src="images/will_stevens.png" alt="Will Stevens">
                 <h3>Will Stevens</h3>
                 <p>Co-founder & Content Developer</p>
-                <p>Will is an MSc Energy Systems and Data Analytics student at UCL, passionate about education and making high-quality learning resources accessible.</p>
+                <p>Will is a MSc Energy Systems and Data Analytics student at UCL, passionate about education and making high-quality learning resources accessible.</p>
             </div>
             <div class="team-member">
                 <img src="images/henry_chen.jpg" alt="Henry Chen">
