--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/metal_finishing_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/metal_finishing_notes.html
@@ -227,7 +227,6 @@
                 </table>
                 <h3><b>Uses: </b>Pipe threads, aquariums, roofs, hydraulic systems<br><br></h3>
 
-                <!-- Preservatives -->
                 <h3 id="Preservatives"><b><u>Preservatives:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
@@ -237,20 +236,20 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Improves lifespan of timber</li>
-                                <li>Reduces biological corrosion</li>
-                                <li>Improves aesthetics of wood</li>
+                                <li>Extends the lifespan of metal</li>
+                                <li>Protects against rust and corrosion</li>
+                                <li>Can enhance appearance with coatings</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Toxic</li>
-                                <li>More effective if used to pressure treat wood</li>
+                                <li>Some contain harmful chemicals</li>
+                                <li>Requires proper application (e.g., priming, sealing)</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Wood products exposed to water and corrosion<br><br></h3>
+                <h3><b>Uses: </b>Metal structures exposed to moisture, chemicals, or outdoor conditions<br><br></h3>
 
                 <!-- Anodising -->
                 <h3 id="Anodising"><b><u>Anodising:</b></u></h3>
