A2 qs AQA Alevel

--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/elastomers_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/elastomers_notes.html
@@ -148,7 +148,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="\documents\Q&A\Materials\Elastomers_Q&A.pdf">Elastomers Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_elastomers.pdf">Elastomers Questions</a>
                 </div>
             </div>
         </div>
