--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_pprs_a_brds_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_pprs_a_brds_notes.html
@@ -287,7 +287,7 @@
                         <h3><b>Topic test:</b></h3>
         
                         <div class="blurbox" style="background-color: #bdbdbd;">
-                            <a href="\documents\Q&A\Materials\&A.pdf"></a>
+                            <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_papers_and_boards.pdf">Performance characteristics of papers and boards Questions</a>
                         </div>
                     </div>
 
