--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_plymer_shet_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_plymer_shet_notes.html
@@ -213,6 +213,12 @@
 </table>
 <h3><b>Uses: </b>Biodegradable packaging, Food containers, Disposable cutlery<br><br><br><br></h3>
 
+<h3><b>Topic test:</b></h3>
+        
+                        <div class="blurbox" style="background-color: #bdbdbd;">
+                            <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_polymer_based_sheet_and_film.pdf">Performance characteristics of polymer based sheet and film Questions</a>
+                        </div>
+
 
 
             </div>
