--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_woods_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_woods_notes.html
@@ -511,7 +511,7 @@
                     <h3><b>Topic test:</b></h3>
     
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="../../../../../../../documents/Q&A/Materials/Woods_Q&A.pdf">Woods Questions</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_woods.pdf">Performance characteristics of woods Questions</a>
                     </div>
 
             
