--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_metals_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_metals_notes.html
@@ -83,12 +83,6 @@
                     <li><b>Ability to be Joined with Heat Processes</b> – The ability to be welded, brazed, or soldered. Metals like mild steel are highly weldable and used in fabrication.</li>
                     <li><b>Ability to Take Applied Coatings and Finishes</b> – The ability to be painted, anodised, or plated for improved aesthetics and protection. Galvanised steel is coated with zinc to prevent rust.</li>
                 </ul>
-                <h3><b>Topic test:</b></h3>
-
-                <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="\documents\Q&A\pcom_exercises\Performance_characteristics_of_materials_Q&A.pdf">Performance Characteristics of Materials Questions</a>
-                </div>
-
 
 
 
@@ -621,6 +615,12 @@
                     </tr>
                 </table>
                 <h3><b>Uses: </b>Decorative objects, Tankards and tableware, Jewellery, Trophies, Ornaments<br><br><br><br></h3>
+
+                <h3><b>Topic test:</b></h3>
+        
+                        <div class="blurbox" style="background-color: #bdbdbd;">
+                            <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_metals.pdf">Performance characteristics of metals Questions</a>
+                        </div>
 
 
 
