--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_polymers_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_polymers_notes.html
@@ -462,7 +462,7 @@
                         <h3><b>Topic test:</b></h3>
         
                         <div class="blurbox" style="background-color: #bdbdbd;">
-                            <a href="\documents\Q&A\Materials\Polymers_Q&A.pdf">Polymers Questions</a>
+                            <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_polymers.pdf">Performance characteristics of polymers Questions</a>
                         </div>
                     </div>
 
