--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/biodegradable_polymers_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/biodegradable_polymers_notes.html
@@ -185,7 +185,7 @@
                     <h3><b>Topic test:</b></h3>
 
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="\documents\Q&A\processes_techniques_special_tools_exercises\.pdf">Biodegradable Polymers</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_biodegradable_polymers.pdf">Biodegradable polymers Questions</a>
                     </div>
                 
                 <!-- <div class="download-page">
