--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_composites_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_composites_notes.html
@@ -238,7 +238,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="\documents\Q&A\Materials\Composites_Q&A.pdf">Composite Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_composites.pdf">Composites Questions</a>
                 </div>
             </div>
         </div>
